fixed a weird bug with collapsing rubies

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -63,3 +63,7 @@ a {
 a:hover {
     text-decoration: none;
 }
+
+.pinyin-span {
+    display: inline-block;
+}
